<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mike.carrostaller.informe_2">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informe_2"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="90dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtCarrosFerrari"
            android:text="@string/informe2_4"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="25dp" />

        <TextView
            android:id="@+id/txtCarrosNissan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="217dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblInforme2"
            android:text="@string/informe2_2"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="133dp" />

        <TextView
            android:id="@+id/txtCarrosBmw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblInforme2_2"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView11"
            android:text="@string/informe2_1"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="65dp" />

        <TextView
            android:id="@+id/txtCarrosAudi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblInforme2_3"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCarrosBmw"
            android:text="@string/informe2_3"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="116dp" />

        <TextView
            android:id="@+id/txtCarrosFerrari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtCarrosFerrari"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="133dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtCarrosNissan"
            android:text="@string/informe2_5"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp" />

        <TextView
            android:id="@+id/txtCarrosBuggati"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView11"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="227dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
