<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mike.carrostaller.informe_3">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informe3"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="81dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblInforme3"
            android:text="@string/informe3_1"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="81dp" />

        <TextView
            android:id="@+id/txtCarrosAmarillos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblInforme3_2"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="81dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCarrosAmarillos"
            android:text="@string/informe3_2"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="81dp" />

        <TextView
            android:id="@+id/txtCarrosRojos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblInforme3_3"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="81dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCarrosRojos"
            android:text="@string/informe3_3"
            android:textColor="#009688"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="81dp" />

        <TextView
            android:id="@+id/txtCarrosAzules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblInforme3_1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="81dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
